# linux-dev-conn

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
example/: CMakeLists.txt
example/i2c/: CMakeLists.txt  main.cpp
example/logger/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/i2c/: CMakeLists.txt  i2c_dev.cpp
src/i2c/include/: i2c_dev.h
src/include/: comm_device.h  io_device.h
src/logger/: CMakeLists.txt
src/logger/include/: logger.h
